[package]
name = "db1000n-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
self_update = { version = "0.30.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"]}
serde_json = "1.0.81"
clap = { version = "3.0", features = ["derive"] }